proofread qdrant-new.ipynb

--- a/docs/docs/integrations/vectorstores/qdrant-new.ipynb
+++ b/docs/docs/integrations/vectorstores/qdrant-new.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "This documentation demonstrates how to use Qdrant with Langchain for dense/sparse and hybrid retrieval.\n",
     "\n",
-    "> This page documents the `QdrantVectorStore` class that support dense, sparse and hybrid retrievals via Qdrant's new [Query API](https://qdrant.tech/blog/qdrant-1.10.x/). It requires you to run Qdrant v1.10.0 or above. For the older implementation, refer to the `Qdrant` class [docs](https://python.langchain.com/v0.2/docs/integrations/vectorstores/qdrant/).\n",
+    "> This page documents the `QdrantVectorStore` class that supports dense, sparse and hybrid retrievals via Qdrant's new [Query API](https://qdrant.tech/blog/qdrant-1.10.x/). It requires you to run Qdrant v1.10.0 or above. For the older implementation, refer to the `Qdrant` class [docs](https://python.langchain.com/v0.2/docs/integrations/vectorstores/qdrant/).\n",
     "\n",
     "There are various modes of how to run `Qdrant`, and depending on the chosen one, there will be some subtle differences. The options include:\n",
     "- Local mode, no server required\n",
@@ -93,7 +93,7 @@
     "\n",
     "### Local mode\n",
     "\n",
-    "Python client allows you to run the same code in local mode without running the Qdrant server. That's great for testing things out and debugging or if you plan to store just a small amount of vectors. The embeddings might be fully kepy in memory or persisted on disk.\n",
+    "Python client allows you to run the same code in local mode without running the Qdrant server. That's great for testing things out and debugging or storing just a small amount of vectors. The embeddings might be fully kept in memory or persisted on disk.\n",
     "\n",
     "#### In-memory\n",
     "\n",
@@ -129,7 +129,7 @@
    "source": [
     "#### On-disk storage\n",
     "\n",
-    "Local mode, without using the Qdrant server, may also store your vectors on disk so they're persisted between runs."
+    "Local mode, without using the Qdrant server, may also store your vectors on disk so they persist between runs."
    ]
   },
   {
@@ -317,7 +317,7 @@
     "To search with only dense vectors,\n",
     "\n",
     "- The `retrieval_mode` parameter should be set to `RetrievalMode.DENSE`(default).\n",
-    "- A [dense embeddings provider](https://python.langchain.com/v0.2/docs/integrations/text_embedding/) value should be provider for the `embedding` parameter."
+    "- A [dense embeddings provider](https://python.langchain.com/v0.2/docs/integrations/text_embedding/) value should be a provided for the `embedding` parameter."
    ]
   },
   {
@@ -520,7 +520,7 @@
    "source": [
     "## Maximum marginal relevance search (MMR)\n",
     "\n",
-    "If you'd like to look up for some similar documents, but you'd also like to receive diverse results, MMR is method you should consider. Maximal marginal relevance optimizes for similarity to query AND diversity among selected documents.\n",
+    "If you'd like to look up some similar documents, but you'd also like to receive diverse results, MMR is the method you should consider. Maximal marginal relevance optimizes for similarity to query AND diversity among selected documents.\n",
     "\n",
     "Note that MMR search is only available if you've added documents with `DENSE` or `HYBRID` modes. Since it requires dense vectors."
    ]
@@ -631,7 +631,7 @@
    "source": [
     "## Customizing Qdrant\n",
     "\n",
-    "There are options to use an existing Qdrant collection within your Langchain application. In such cases you may need to define how to map Qdrant point into the Langchain `Document`.\n",
+    "There are options to use an existing Qdrant collection within your Langchain application. In such cases, you may need to define how to map Qdrant point into the Langchain `Document`.\n",
     "\n",
     "### Named vectors\n",
     "\n",
