docs: fix hyperlink

--- a/docs/docs/how_to/hybrid.ipynb
+++ b/docs/docs/how_to/hybrid.ipynb
@@ -13,7 +13,9 @@
     "\n",
     "**Step 1: Make sure the vectorstore you are using supports hybrid search**\n",
     "\n",
-    "At the moment, there is no unified way to perform hybrid search in LangChain. Each vectorstore has their own way of doing it. Vectorstores like [Qdrant](docs/integrations/vectorstores/qdrant-new) allow you to configure dense/sparse/hybrid search when the setting it up. For others, it is generally exposed as a keyword argument that is passed in during `similarity_search`. By reading the documentation or source code, figure out whether the vectorstore you are using supports hybrid search, and, if so, how to use it.\n",
+    "At the moment, there is no unified way to perform hybrid search in LangChain. Each vectorstore has their own way of doing it. Vectorstores like [Qdrant](/docs/integrations/vectorstores/qdrant-new) allow you to configure hybrid search when the setting it up. For others, it is generally exposed as a keyword argument that is passed in during `similarity_search`.\n",
+    "\n",
+    "By reading the documentation or source code, figure out whether the vectorstore you are using supports hybrid search, and, if so, how to use it.\n",
     "\n",
     "**Step 2: Add that parameter as a configurable field for the chain**\n",
     "\n",
