--- a/docs/docs/integrations/vectorstores/qdrant-new.ipynb
+++ b/docs/docs/integrations/vectorstores/qdrant-new.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "This documentation demonstrates how to use Qdrant with Langchain for dense/sparse and hybrid retrieval.\n",
     "\n",
-    "> This page documents the `QdrantVectorStore` class that supports dense, sparse and hybrid retrievals via Qdrant's new [Query API](https://qdrant.tech/blog/qdrant-1.10.x/). It requires you to run Qdrant v1.10.0 or above. For the older implementation, refer to the `Qdrant` class [docs](https://python.langchain.com/v0.2/docs/integrations/vectorstores/qdrant/).\n",
+    "> This page documents the `QdrantVectorStore` class that supports multiple retrieval modes via Qdrant's new [Query API](https://qdrant.tech/blog/qdrant-1.10.x/). It requires you to run Qdrant v1.10.0 or above. For the older implementation, refer to the `Qdrant` class [docs](https://python.langchain.com/v0.2/docs/integrations/vectorstores/qdrant/).\n",
     "\n",
     "There are various modes of how to run `Qdrant`, and depending on the chosen one, there will be some subtle differences. The options include:\n",
     "- Local mode, no server required\n",
