Split into two guides

--- a/docs/docs/how_to/tool_stream_events.ipynb
+++ b/docs/docs/how_to/tool_stream_events.ipynb
@@ -4,14 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# How to configure and stream steps from subruns within a tool\n",
+    "# How to stream events from child runs within a custom tool\n",
     "\n",
     ":::info Prerequisites\n",
     "\n",
     "This guide assumes familiarity with the following concepts:\n",
     "- [LangChain Tools](/docs/concepts/#tools)\n",
+    "- [Custom tools](/docs/how_to/custom_tools)\n",
     "- [Using stream events](/docs/how_to/streaming/#using-stream-events)\n",
-    "- [Configuring runnable behavior](/docs/how_to/configure/)\n",
+    "- [Accessing RunnableConfig within a custom tool](/docs/how_to/tool_configure/)\n",
     "\n",
     ":::\n",
     "\n",
@@ -19,11 +20,11 @@
     "\n",
     ":::caution Compatibility\n",
     "\n",
-    "LangChain cannot automatically propagate configuration, including callbacks necessary for `astream_events()` to child runnables if you are running `async` code in `python<=3.10`. This is a common reason why you may fail to see events being emitted from custom runnables or tools.\n",
+    "LangChain cannot automatically propagate configuration, including callbacks necessary for `astream_events()`, to child runnables if you are running `async` code in `python<=3.10`. This is a common reason why you may fail to see events being emitted from custom runnables or tools.\n",
     "\n",
-    "If you are running `python>=3.11`, you don't have to manually pass config through, though it can still be a good idea if your code may run in other versions.\n",
+    "If you are running `python>=3.11`, configuration will automatically propagate to child runnables in async environments, and you don't need to access the `RunnableConfig` object for that tool as shown in this guide. However, it is still a good idea if your code may run in other Python versions.\n",
     "\n",
-    "This guide also requires you to be using `langchain-core>=0.2.16`.\n",
+    "This guide also requires `langchain-core>=0.2.16`.\n",
     "\n",
     ":::\n",
     "\n",
@@ -151,9 +152,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You'll notice (unless you're running through this guide in `python>=3.11`) that there are no chat model events emitted from the subrun!\n",
+    "You'll notice (unless you're running through this guide in `python>=3.11`) that there are no chat model events emitted from the child run!\n",
     "\n",
-    "This is because the example above does not pass the tool's config object into the internal chain. To fix this, redefine your tool to take a special parameter typed as `RunnableConfig`. You'll also need to pass that parameter through into the internal chain when executing it:"
+    "This is because the example above does not pass the tool's config object into the internal chain. To fix this, redefine your tool to take a special parameter typed as `RunnableConfig` (see [this guide](/docs/how_to/tool_configure) for more details). You'll also need to pass that parameter through into the internal chain when executing it:"
    ]
   },
   {
@@ -261,66 +262,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Configuration\n",
-    "\n",
-    "The `config` object also includes values passed into the tool at runtime. You can use these values to [configure properties of the internal runnables](/docs/how_to/configure/) as usual. Here's an example that allows you to swap the prompt in the internal chain:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"Bees defy science\\nWings too small, yet still they soar\\nNature's sweet rebels\""
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from langchain_core.runnables import ConfigurableField, RunnableConfig, RunnableLambda\n",
-    "\n",
-    "\n",
-    "@tool\n",
-    "async def tool_with_configurable(long_text: str, config: RunnableConfig) -> str:\n",
-    "    \"\"\"A tool that transforms input text using advanced techniques.\"\"\"\n",
-    "    haiku_prompt = ChatPromptTemplate.from_template(\n",
-    "        \"Turn the following text into a related haiku. Do not return any other text:\\n\\n{long_text}\"\n",
-    "    )\n",
-    "    prompt = ChatPromptTemplate.from_template(\n",
-    "        \"You are an expert writer. Summarize the following text in 10 words or less:\\n\\n{long_text}\"\n",
-    "    ).configurable_alternatives(\n",
-    "        ConfigurableField(id=\"action\"),\n",
-    "        default_key=\"summarize\",\n",
-    "        # Just keep the output of the model the same if \"preserve\" is passed as a key\n",
-    "        haiku=haiku_prompt,\n",
-    "    )\n",
-    "\n",
-    "    chain = prompt | model | StrOutputParser()\n",
-    "    # Pass the \"config\" object as an argument to any executed runnables\n",
-    "    summary = await chain.ainvoke({\"long_text\": long_text}, config=config)\n",
-    "    return summary\n",
-    "\n",
-    "\n",
-    "await tool_with_configurable.ainvoke(\n",
-    "    {\"long_text\": LONG_TEXT}, config={\"configurable\": {\"action\": \"haiku\"}}\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Next steps\n",
     "\n",
     "You've now seen how to configure and stream events from within a tool. Next, check out the following guides for more on using tools:\n",
     "\n",
-    "- Bind [model-specific tools](/docs/how_to/tools_model_specific/)\n",
     "- Pass [runtime values to tools](/docs/how_to/tool_runtime)\n",
     "- Pass [tool results back to a model](/docs/how_to/tool_results_pass_to_model)\n",
     "\n",
