--- a/docs/docs/how_to/tool_stream_events.ipynb
+++ b/docs/docs/how_to/tool_stream_events.ipynb
@@ -264,7 +264,7 @@
    "source": [
     "## Next steps\n",
     "\n",
-    "You've now seen how to configure and stream events from within a tool. Next, check out the following guides for more on using tools:\n",
+    "You've now seen how to stream events from within a tool. Next, check out the following guides for more on using tools:\n",
     "\n",
     "- Pass [runtime values to tools](/docs/how_to/tool_runtime)\n",
     "- Pass [tool results back to a model](/docs/how_to/tool_results_pass_to_model)\n",
