--- a/docs/docs/how_to/tool_runtime.ipynb
+++ b/docs/docs/how_to/tool_runtime.ipynb
@@ -96,20 +96,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_core.utils import curry\n",
     "from langchain_core.tools import StructuredTool\n",
+    "from langchain_core.utils.curry import curry\n",
     "\n",
-    "user_to_pets = {\n",
-    "    \"eugene\": [\"cats\"]\n",
-    "}\n",
+    "user_to_pets = {\"eugene\": [\"cats\"]}\n",
+    "\n",
     "\n",
     "def list_favorite_pets(user_id: str) -> None:\n",
     "    \"\"\"List favorite pets, if any.\"\"\"\n",
     "    return user_to_pets.get(user_id, [])\n",
     "\n",
-    "curried_tool = StructuredTool.from_function(\n",
-    "    curry(list_favorite_pets, user_id=\"eugene\")\n",
-    ")"
+    "\n",
+    "curried_function = curry(list_favorite_pets, user_id=\"eugene\")\n",
+    "\n",
+    "curried_tool = StructuredTool.from_function(curried_function)"
    ]
   },
   {
