--- a/docs/docs/how_to/tool_runtime.ipynb
+++ b/docs/docs/how_to/tool_runtime.ipynb
@@ -58,9 +58,7 @@
     "# | output: false\n",
     "# | echo: false\n",
     "\n",
-    "# %pip install -qU langchain_core langchain_openai\n",
-    "\n",
-    "%pip install -qU /Users/jacoblee/langchain/langchain/libs/core langchain_openai\n",
+    "%pip install -qU langchain_core langchain_openai\n",
     "\n",
     "import os\n",
     "from getpass import getpass\n",
