--- a/docs/docs/integrations/chat/oci_model_deployment_endpoint.ipynb
+++ b/docs/docs/integrations/chat/oci_model_deployment_endpoint.ipynb
@@ -1,16 +1,67 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "---\n",
+    "sidebar_label: ChatOCIModelDeploymentEndpoint\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# OCI Data Science Model Deployment Endpoint\n",
     "\n",
+    "This notebook provides a quick overview for getting started with OCI Data Science Model Deployment [chat models](/docs/concepts/#chat-models).\n",
+    "\n",
     "[OCI Data Science](https://docs.oracle.com/en-us/iaas/data-science/using/home.htm) is a fully managed and serverless platform for data science teams to build, train, and manage machine learning models in the Oracle Cloud Infrastructure.\n",
     "\n",
-    "This notebooks goes over how to use an LLM hosted on a [OCI Data Science Model Deployment](https://docs.oracle.com/en-us/iaas/data-science/using/model-dep-about.htm).\n",
+    "This notebooks goes over how to use a chat model hosted on a [OCI Data Science Model Deployment](https://docs.oracle.com/en-us/iaas/data-science/using/model-dep-about.htm).\n",
     "\n",
-    "To authenticate, [oracle-ads](https://accelerated-data-science.readthedocs.io/en/latest/user_guide/cli/authentication.html) has been used to automatically load credentials for invoking endpoint."
+    "To authenticate, [oracle-ads](https://accelerated-data-science.readthedocs.io/en/latest/user_guide/cli/authentication.html) has been used to automatically load credentials for invoking endpoint.\n",
+    "\n",
+    "\n",
+    "## Overview\n",
+    "### Integration details\n",
+    "\n",
+    "| Class | Package | Local | Serializable | [JS support](https://js.langchain.com/v0.2/docs/integrations/chat/oci_generative_ai) | Package downloads | Package latest |\n",
+    "| :--- | :--- | :---: | :---: |  :---: | :---: | :---: |\n",
+    "| [ChatOCIModelDeploymentEndpoint](https://api.python.langchain.com/en/latest/chat_models/langchain_community.chat_models.oci_data_science_model_deployment_endpoint.ChatOCIModelDeploymentEndpoint.html) | [langchain-community](https://api.python.langchain.com/en/latest/community_api_reference.html) | ❌ | ❌ | ❌ | ![PyPI - Downloads](https://img.shields.io/pypi/dm/langchain-oci-model-deployment?style=flat-square&label=%20) | ![PyPI - Version](https://img.shields.io/pypi/v/langchain-oci-model-deployment?style=flat-square&label=%20) |\n",
+    "\n",
+    "### Model features\n",
+    "| [Tool calling](/docs/how_to/tool_calling/) | [Structured output](/docs/how_to/structured_output/) | JSON mode | [Image input](/docs/how_to/multimodal_inputs/) | Audio input | Video input | [Token-level streaming](/docs/how_to/chat_streaming/) | Native async | [Token usage](/docs/how_to/chat_token_usage_tracking/) | [Logprobs](/docs/how_to/logprobs/) |\n",
+    "| :---: | :---: | :---: | :---: |  :---: | :---: | :---: | :---: | :---: | :---: |\n",
+    "| ❌ | ❌ | ✅  | ❌ | ❌ | ❌ | ✅ | ✅  | ✅ | ❌ | \n",
+    "\n",
+    "## Prerequisite\n",
+    "\n",
+    "### Deploy model\n",
+    "Check [Oracle GitHub samples repository](https://github.com/oracle-samples/oci-data-science-ai-samples/tree/main/model-deployment/containers/llama2) on how to deploy your chat model on OCI Data Science Model deployment.\n",
+    "\n",
+    "### Policies\n",
+    "Make sure to have the required [policies](https://docs.oracle.com/en-us/iaas/data-science/using/model-dep-policies-auth.htm#model_dep_policies_auth__predict-endpoint) to access the OCI Data Science Model Deployment endpoint.\n",
+    "\n",
+    "## Set up\n",
+    "\n",
+    "To access OCI Data Science Model Deployment models you'll need to create an OCI account, set up credentials, and install required packages.\n",
+    "\n",
+    "### Authentication\n",
+    "\n",
+    "You can set authentication through either ads or environment variables. When you are working in OCI Data Science Notebook Session, you can leverage resource principal to access other OCI resources. Check out [here](https://accelerated-data-science.readthedocs.io/en/latest/user_guide/cli/authentication.html) to see more options. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Installation"
    ]
   },
   {
@@ -19,29 +70,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip3 install oracle-ads"
+    "%pip install -qU langchain-community oracle-ads"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prerequisite\n",
-    "\n",
-    "### Deploy model\n",
-    "Check [Oracle GitHub samples repository](https://github.com/oracle-samples/oci-data-science-ai-samples/tree/main/model-deployment/containers/llama2) on how to deploy your llm on OCI Data Science Model deployment.\n",
-    "\n",
-    "### Policies\n",
-    "Make sure to have the required [policies](https://docs.oracle.com/en-us/iaas/data-science/using/model-dep-policies-auth.htm#model_dep_policies_auth__predict-endpoint) to access the OCI Data Science Model Deployment endpoint.\n",
-    "\n",
-    "## Set up\n",
-    "\n",
-    "TBD\n",
-    "\n",
-    "### Authentication\n",
-    "\n",
-    "You can set authentication through either ads or environment variables. When you are working in OCI Data Science Notebook Session, you can leverage resource principal to access other OCI resources. Check out [here](https://accelerated-data-science.readthedocs.io/en/latest/user_guide/cli/authentication.html) to see more options. \n",
-    "\n",
     "## Instantiation\n",
     "\n",
     "Now we can instantiate our model object and generate chat completions:"
@@ -70,10 +105,11 @@
     "    auth=ads.common.auth.default_signer(),\n",
     "    streaming=False,\n",
     "    max_retries=3,\n",
-    "    temperature=0.2,\n",
-    "    max_tokens=512,\n",
     "    stop=None,\n",
-    "    model_kwargs={},  # other model params...\n",
+    "    model_kwargs={\n",
+    "        \"temperature\": 0.2,\n",
+    "        \"max_tokens\": 512,\n",
+    "    },  # model params...\n",
     ")"
    ]
   },
