improvement on notebook example

--- a/docs/docs/integrations/llms/oci_model_deployment_endpoint.ipynb
+++ b/docs/docs/integrations/llms/oci_model_deployment_endpoint.ipynb
@@ -105,6 +105,33 @@
     "# Run the LLM\n",
     "llm.invoke(\"Who is the first president of United States?\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "``OCIModelDeploymentLLM`` also supports native async invoke and streaming functionality:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "message = \"Who is the first president of United States?\"\n",
+    "await llm.ainvoke(message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for chunk in llm.stream(message):\n",
+    "    print(chunk, end=\"\", flush=True)"
+   ]
   }
  ],
  "metadata": {
