--- a/docs/docs/how_to/tool_artifacts.ipynb
+++ b/docs/docs/how_to/tool_artifacts.ipynb
@@ -38,9 +38,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Tuple, List\n",
-    "from langchain_core.tools import tool\n",
     "import random\n",
+    "from typing import List, Tuple\n",
+    "\n",
+    "from langchain_core.tools import tool\n",
+    "\n",
     "\n",
     "@tool(response_format=\"content_and_artifact\")\n",
     "def generate_random_ints(min: int, max: int, size: int) -> Tuple[str, List[int]]:\n",
@@ -107,7 +109,14 @@
     }
    ],
    "source": [
-    "generate_random_ints.invoke({\"name\": \"generate_random_ints\", \"args\": {\"min\": 0, \"max\": 9, \"size\": 10}, \"id\": \"123\", \"type\": \"tool_call\"})"
+    "generate_random_ints.invoke(\n",
+    "    {\n",
+    "        \"name\": \"generate_random_ints\",\n",
+    "        \"args\": {\"min\": 0, \"max\": 9, \"size\": 10},\n",
+    "        \"id\": \"123\",\n",
+    "        \"type\": \"tool_call\",\n",
+    "    }\n",
+    ")"
    ]
   },
   {
@@ -287,6 +296,7 @@
    "source": [
     "from langchain_core.tools import BaseTool\n",
     "\n",
+    "\n",
     "class GenerateRandomFloats(BaseTool):\n",
     "    name: str = \"generate_random_floats\"\n",
     "    description: str = \"Generate size random floats in the range [min, max].\"\n",
@@ -296,12 +306,15 @@
     "\n",
     "    def _run(self, min: float, max: float, size: int) -> Tuple[str, List[float]]:\n",
     "        range_ = max - min\n",
-    "        array = [round(min + (range_ * random.random()), ndigits=self.ndigits) for _ in range(size)]\n",
+    "        array = [\n",
+    "            round(min + (range_ * random.random()), ndigits=self.ndigits)\n",
+    "            for _ in range(size)\n",
+    "        ]\n",
     "        content = f\"Generated {size} floats in [{min}, {max}], rounded to {self.ndigits} decimals.\"\n",
     "        return content, array\n",
     "\n",
     "    # Optionally define an equivalent async method\n",
-    "        \n",
+    "\n",
     "    # async def _arun(self, min: float, max: float, size: int) -> Tuple[str, List[float]]:\n",
     "    #     ..."
    ]
@@ -346,7 +359,14 @@
     }
    ],
    "source": [
-    "rand_gen.invoke({\"name\": \"generate_random_floats\", \"args\": {\"min\": 0.1, \"max\": 3.3333, \"size\": 3}, \"id\": \"123\", \"type\": \"tool_call\"})"
+    "rand_gen.invoke(\n",
+    "    {\n",
+    "        \"name\": \"generate_random_floats\",\n",
+    "        \"args\": {\"min\": 0.1, \"max\": 3.3333, \"size\": 3},\n",
+    "        \"id\": \"123\",\n",
+    "        \"type\": \"tool_call\",\n",
+    "    }\n",
+    ")"
    ]
   }
  ],
