--- a/docs/docs/how_to/tool_artifacts.ipynb
+++ b/docs/docs/how_to/tool_artifacts.ipynb
@@ -5,7 +5,7 @@
    "id": "503e36ae-ca62-4f8a-880c-4fe78ff5df93",
    "metadata": {},
    "source": [
-    "# How to return artifacts from a tool\n",
+    "# How to return extra artifacts from a tool\n",
     "\n",
     "Tools are utilities that can be called by a model, and whose outputs are designed to be fed back to a model. Sometimes, however, there are artifacts of a tool's execution that we want to make accessible to downstream components in our chain or agent, but that we don't want to expose to the model itself. For example if a tool returns a custom object, a dataframe or an image, we may want to pass some metadata about this output to the model without passing the actual output to the model. At the same time, we may want to be able to access this full output elsewhere, for example in downstream tools.\n",
     "\n",
