Make apparent that name doesn't matter

--- a/docs/docs/how_to/tool_configure.ipynb
+++ b/docs/docs/how_to/tool_configure.ipynb
@@ -31,12 +31,23 @@
     "\n",
     "To access reference the active config object from your custom tool, you'll need to add a parameter to your tool's signature typed as `RunnableConfig`. When you invoke your tool, LangChain will inspect your tool's signature, look for a parameter typed as `RunnableConfig`, and if it exists, populate that parameter with the correct value.\n",
     "\n",
+    "**Note:** The actual name of the parameter doesn't matter, only the typing.\n",
+    "\n",
     "To illustrate this, define a custom tool that takes a two parameters - one typed as a string, the other typed as `RunnableConfig`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install -qU langchain_core"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,9 +56,9 @@
     "\n",
     "\n",
     "@tool\n",
-    "async def reverse_tool(text: str, config: RunnableConfig) -> str:\n",
+    "async def reverse_tool(text: str, special_config_param: RunnableConfig) -> str:\n",
     "    \"\"\"A test tool that combines input text with a configurable parameter.\"\"\"\n",
-    "    return (text + config[\"configurable\"][\"additional_field\"])[::-1]"
+    "    return (text + special_config_param[\"configurable\"][\"additional_field\"])[::-1]"
    ]
   },
   {
@@ -59,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +79,7 @@
        "'321cba'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
