--- a/docs/docs/integrations/retrievers/nanopq.ipynb
+++ b/docs/docs/integrations/retrievers/nanopq.ipynb
@@ -14,45 +14,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "68794637-c13b-4145-944f-3b0c2f1258f9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "langchain-google-vertexai 1.0.3 requires langchain-core<0.2.0,>=0.1.42, but you have langchain-core 0.2.3 which is incompatible.\u001b[0m\u001b[31m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install -qU langchain-community langchain-openai nanopq"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "39ecbf50-4623-4ee6-9c8e-fea5da21767e",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'NanoPQRetriever' from 'langchain_community.retrievers' (/Users/bagatur/langchain/libs/community/langchain_community/retrievers/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_community\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mretrievers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m NanoPQRetriever\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_openai\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m OpenAIEmbeddings\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'NanoPQRetriever' from 'langchain_community.retrievers' (/Users/bagatur/langchain/libs/community/langchain_community/retrievers/__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain_community.retrievers import NanoPQRetriever\n",
-    "from langchain_openai import OpenAIEmbeddings"
+    "from langchain_community.embeddings.spacy_embeddings import SpacyEmbeddings"
    ]
   },
   {
@@ -65,14 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6c80020e-bc9e-49e8-8f93-5f75fd823738",
    "metadata": {},
    "outputs": [],
    "source": [
-    "retriever = NanoPQRetriever.from_texts(\n",
-    "    [\"foo\", \"bar\", \"world\", \"hello\", \"foo bar\"], OpenAIEmbeddings()\n",
-    ")"
+    "retriever = NanoPQRetriever.from_texts([\"Great world\", \"great words\", \"world\", \"planets of the world\"], \n",
+    "                                       SpacyEmbeddings(model_name=\"en_core_web_sm\"), clusters=2, subspace=2)"
    ]
   },
   {
@@ -87,30 +64,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "f496de2d-9b8f-4f8b-a30f-279ef199259a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "M: 2, Ks: 2, metric : <class 'numpy.uint8'>, code_dtype: l2\n",
+      "iter: 20, seed: 123\n",
+      "Training the subspace: 0 / 2\n",
+      "Training the subspace: 1 / 2\n",
+      "Encoding the subspace: 0 / 2\n",
+      "Encoding the subspace: 1 / 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[Document(page_content='world'),\n",
+       " Document(page_content='Great world'),\n",
+       " Document(page_content='great words'),\n",
+       " Document(page_content='planets of the world')]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "result = retriever.invoke(\"foo\")"
+    "retriever.invoke(\"earth\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d10fecc-5e01-45fb-bcd5-716860b7331d",
+   "id": "617202a7-e3a6-49a8-b807-4b4d771159d5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "result"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "poetry-venv-2",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "poetry-venv-2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -122,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
