docs: New doc reference

--- a/docs/docs/integrations/vectorstores/qdrant-new.ipynb
+++ b/docs/docs/integrations/vectorstores/qdrant-new.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Qdrant - New\n",
     "\n",
-    ">[Qdrant](https://qdrant.tech/documentation/) (read: quadrant ) is a vector similarity search engine. It provides a production-ready service with a convenient API to store, search, and manage points - vectors with an additional payload. Qdrant provides extensive filtering support that makes it useful for all sorts of neural network or semantic-based matching, faceted search, and other applications.\n",
+    ">[Qdrant](https://qdrant.tech/documentation/) (read: quadrant ) is a vector similarity search engine. It provides a production-ready service with a convenient API to store, search, and manage vectors with additional payload and extended filtering support. It makes it useful for all sorts of neural network or semantic-based matching, faceted search, and other applications.\n",
     "\n",
     "This documentation demonstrates how to use Qdrant with Langchain for dense/sparse and hybrid retrieval.\n",
     "\n",
