--- a/docs/docs/integrations/vectorstores/qdrant.ipynb
+++ b/docs/docs/integrations/vectorstores/qdrant.ipynb
@@ -8,17 +8,14 @@
    "source": [
     "# Qdrant\n",
     "\n",
-    ">[Qdrant](https://qdrant.tech/documentation/) (read: quadrant ) is a vector similarity search engine. It provides a production-ready service with a convenient API to store, search, and manage points - vectors with an additional payload. `Qdrant` is tailored to extended filtering support. It makes it useful for all sorts of neural network or semantic-based matching, faceted search, and other applications.\n",
+    ">[Qdrant](https://qdrant.tech/documentation/) (read: quadrant ) is a vector similarity search engine. It provides a production-ready service with a convenient API to store, search, and manage vectors with additional payload and extended filtering support. It makes it useful for all sorts of neural network or semantic-based matching, faceted search, and other applications.\n",
     "\n",
     "\n",
-    "This notebook shows how to use functionality related to the `Qdrant` vector database. \n",
+    "This notebook shows how to use functionality related to the `Qdrant` vector database.\n",
     "\n",
-    "There are various modes of how to run `Qdrant`, and depending on the chosen one, there will be some subtle differences. The options include:\n",
-    "- Local mode, no server required\n",
-    "- On-premise server deployment\n",
-    "- Qdrant Cloud\n",
+    "> You are viewing the documentation for an older version of the Qdrant integration. An updated version supporting sparse and hybrid search is available [here](/docs/integrations/vectorstores/qdrant-new/).\n",
     "\n",
-    "See the [installation instructions](https://qdrant.tech/documentation/install/)."
+    "To setup Qdrant, refer to the [installation instructions](https://qdrant.tech/documentation/install/)."
    ]
   },
   {
