--- a/docs/docs/how_to/sql_csv.ipynb
+++ b/docs/docs/how_to/sql_csv.ipynb
@@ -463,15 +463,11 @@
    ],
    "source": [
     "system = f\"\"\"You have access to a pandas dataframe `df`. \\\n",
-    "Here is the output of `df.head().to_markdown()`:\n",
-    "\n",
-    "```\n",
-    "{df.head().to_markdown()}\n",
-    "```\n",
-    "\n",
+    "Here is the output of `df.head().to_markdown()`:{df.head().to_markdown()}\n",
     "Given a user question, write the Python code to answer it. \\\n",
     "Return ONLY the valid Python code and nothing else. \\\n",
     "Don't assume you have access to any libraries other than built-in Python ones and pandas.\"\"\"\n",
+    "\n",
     "prompt = ChatPromptTemplate.from_messages([(\"system\", system), (\"human\", \"{question}\")])\n",
     "code_chain = prompt | llm_with_tools | parser\n",
     "code_chain.invoke({\"question\": \"What's the correlation between age and fare\"})"
