address comments about private class, documentation, etc.

--- a/docs/docs/integrations/document_loaders/unstructured_file.ipynb
+++ b/docs/docs/integrations/document_loaders/unstructured_file.ipynb
@@ -295,12 +295,33 @@
    "source": [
     "## Unstructured API\n",
     "\n",
-    "If you want to get up and running with less set up, you can simply run `pip install unstructured-client` and use `UnstructuredSDKFileLoader` or `UnstructuredSDKFileIOLoader`. These will process your document using the hosted Unstructured API. You can generate a free Unstructured API key [here](https://www.unstructured.io/api-key/). The [Unstructured documentation](https://unstructured-io.github.io/unstructured/) page will have instructions on how to generate an API key once they’re available. Check out the instructions [here](https://github.com/Unstructured-IO/unstructured-api#dizzy-instructions-for-using-the-docker-image) if you’d like to self-host the Unstructured API or run it locally."
+    "If you want to get up and running with less set up, you can simply run `pip install\n",
+    "unstructured-client` and `pip install langchain-unstructured` to use the `UnstructuredSDKFileLoader`\n",
+    "or `UnstructuredSDKFileIOLoader`. For more information about these loaders, refer to the\n",
+    "[Unstructured provider page](https://python.langchain.com/v0.1/docs/integrations/document_loaders/unstructured_file/).\n",
+    "These loaders will process your document using the hosted Unstructured API. You can generate a free\n",
+    "Unstructured API key [here](https://www.unstructured.io/api-key/). The [Unstructured\n",
+    "documentation](https://unstructured-io.github.io/unstructured/) page will have instructions on how\n",
+    "to generate an API key once they’re available. Check out the instructions\n",
+    "[here](https://github.com/Unstructured-IO/unstructured-api#dizzy-instructions-for-using-the-docker-image)\n",
+    "if you’d like to self-host the Unstructured API or run it locally."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "id": "6e5fde16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install package\n",
+    "%pip install \"unstructured-client\"\n",
+    "%pip install \"langchain-unstructured\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "386eb63c",
    "metadata": {},
    "outputs": [
@@ -317,10 +338,10 @@
     {
      "data": {
       "text/plain": [
-       "Document(metadata={'source': 'example_data/fake.docx'}, page_content='Lorem ipsum dolor sit amet.')"
+       "Document(metadata={'source': 'example_data/fake.docx', 'category_depth': 0, 'filename': 'fake.docx', 'languages': ['por', 'cat'], 'filetype': 'application/vnd.openxmlformats-officedocument.wordprocessingml.document', 'category': 'Title', 'element_id': '56d531394823d81787d77a04462ed096'}, page_content='Lorem ipsum dolor sit amet.')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "a3d7c846",
    "metadata": {},
    "outputs": [
