--- a/docs/docs/integrations/document_loaders/quip.ipynb
+++ b/docs/docs/integrations/document_loaders/quip.ipynb
@@ -21,7 +21,7 @@
     "  \n",
     "You can also set `include_all_folders` as `True` will fetch group_folder_ids and \n",
     "You can also specify a boolean `include_attachments` to include attachments, this is set to False by default, if set to True all attachments will be downloaded and QuipLoader will extract the text from the attachments and add it to the Document object. Currently supported attachment types are: `PDF`, `PNG`, `JPEG/JPG`, `SVG`, `Word` and `Excel`. Also you can sepcify a boolean `include_comments` to include comments in document, this is set to False by default, if set to True all comments in document will be fetched and QuipLoader will add them to Document objec.\n",
-    "You can also set `keep_html_format` as `True` if you want to get doc as html format. \n"
+    "You can also set `keep_html_format` as `False` if you don't want to get doc as html format. \n"
    ]
   },
   {
