--- a/docs/docs/integrations/llms/yi.ipynb
+++ b/docs/docs/integrations/llms/yi.ipynb
@@ -4,18 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 使用 LangChain 中的 Yi LLM 模型\n",
+    "# Using Yi LLM Model in LangChain\n",
     "\n",
-    "本教程将指导您如何在 LangChain 中使用 Yi 的 LLM 模型。"
+    "This tutorial will guide you through using Yi's LLM model in LangChain."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. 安装必要的库\n",
+    "## 1. Install Required Libraries\n",
     "\n",
-    "首先，确保您已安装了必要的库："
+    "First, ensure you have the necessary libraries installed:"
    ]
   },
   {
@@ -31,26 +31,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. 获取 Yi API 密钥\n",
+    "## 2. Obtain Yi API Key\n",
     "\n",
-    "要使用 Yi 模型，您需要一个 API 密钥。请按照以下步骤获取：\n",
+    "To use the Yi model, you need an API key. Follow these steps to obtain one:\n",
     "\n",
-    "1. 访问 Yi 的官方网站：https://platform.01.ai/\n",
-    "2. 注册一个账户或登录您的现有账户。\n",
-    "3. 导航到 API 密钥设置页面。\n",
-    "4. 创建一个新的 API 密钥。\n",
-    "5. 复制生成的 API 密钥，我们稍后会用到它。\n",
+    "1. Visit Yi's official website: https://platform.01.ai/\n",
+    "2. Register for an account or log in to your existing account.\n",
+    "3. Navigate to the API key settings page.\n",
+    "4. Create a new API key.\n",
+    "5. Copy the generated API key; we'll use it later.\n",
     "\n",
-    "请注意保管好您的 API 密钥，不要公开分享。"
+    "Remember to keep your API key secure and do not share it publicly."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. 设置环境变量\n",
+    "## 3. Set Environment Variable\n",
     "\n",
-    "将您的 API 密钥设置为环境变量："
+    "Set your API key as an environment variable:"
    ]
   },
   {
@@ -61,14 +61,14 @@
    "source": [
     "import os\n",
     "\n",
-    "os.environ[\"YI_API_KEY\"] = \"your-api-key-here\"  # 替换为您的实际 API 密钥"
+    "os.environ[\"YI_API_KEY\"] = \"your-api-key-here\"  # Replace with your actual API key"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. 导入并初始化 Yi LLM"
+    "## 4. Import and Initialize Yi LLM"
    ]
   },
   {
@@ -79,10 +79,10 @@
    "source": [
     "from langchain_community.llms.yi import Yi\n",
     "\n",
-    "# 初始化 Yi LLM\n",
+    "# Initialize Yi LLM\n",
     "yi = Yi(\n",
-    "    model=\"yi-large\",  # 或者您选择的其他模型\n",
-    "    base_url=\"https://api.lingyiwanwu.com/v1\"  # 使用国内 API，如果在国际地区可以使用 \"https://api.01.ai/v1\"\n",
+    "    model=\"yi-large\",  # Or another model of your choice\n",
+    "    base_url=\"https://api.lingyiwanwu.com/v1\"  # Use domestic API, or \"https://api.01.ai/v1\" for international regions\n",
     ")"
    ]
   },
@@ -90,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. 使用 Yi LLM"
+    "## 5. Use Yi LLM"
    ]
   },
   {
@@ -99,8 +99,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 使用 Yi LLM 生成文本\n",
-    "response = yi.invoke(\"请给我讲一个关于人工智能的短故事。\")\n",
+    "# Generate text using Yi LLM\n",
+    "response = yi.invoke(\"Tell me a short story about artificial intelligence.\")\n",
     "print(response)"
    ]
   },
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. 在 LangChain 链中使用 Yi LLM"
+    "## 6. Use Yi LLM in a LangChain Chain"
    ]
   },
   {
@@ -120,15 +120,15 @@
     "from langchain.prompts import PromptTemplate\n",
     "from langchain.chains import LLMChain\n",
     "\n",
-    "# 创建一个提示模板\n",
-    "template = \"请为一个名为'{product_name}'的{product_type}写一个简短的广告语。\"\n",
+    "# Create a prompt template\n",
+    "template = \"Write a short advertising slogan for a {product_type} called '{product_name}'.\"\n",
     "prompt = PromptTemplate(template=template, input_variables=[\"product_name\", \"product_type\"])\n",
     "\n",
-    "# 创建一个 LLMChain\n",
+    "# Create an LLMChain\n",
     "chain = LLMChain(llm=yi, prompt=prompt)\n",
     "\n",
-    "# 使用链生成广告语\n",
-    "result = chain.run({\"product_name\": \"智慧星\", \"product_type\": \"AI助手\"})\n",
+    "# Use the chain to generate a slogan\n",
+    "result = chain.run({\"product_name\": \"SmartAssist\", \"product_type\": \"AI assistant\"})\n",
     "print(result)"
    ]
   }
