--- a/docs/docs/integrations/llms/yi.ipynb
+++ b/docs/docs/integrations/llms/yi.ipynb
@@ -4,9 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using Yi LLM Model in LangChain\n",
+    "# Yi\n",
     "\n",
-    "This tutorial will guide you through using Yi's LLM model in LangChain."
+    "[01.AI](https://platform.01.ai/), founded by Dr. Kai-Fu Lee, is a global company dedicated to building cutting-edge technology and software applications for large-scale models in the AI 2.0 era, with Yi-Large models with hundreds of billions of parameters, multimodal models, an open API platform, and open-source models such as Yi-34B/9B/6B and Yi-VL for the world.",
+    "This example demonstrates using Langchain to interact with Yi."
    ]
   },
   {
